--- a/index.html
+++ b/index.html
@@ -1,56 +1,44 @@
 <!DOCTYPE html>
-
 <html lang="en-us">
   <head>
     <!-- //defines the language and settings to be used within the doc -->
-
     <meta charset="UTF-8" />
-
     <!-- //linking the style.css document to the html -->
 
-    <link rel="stylesheet" href=".//assets/css/style.css" />
-
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>website</title>
   </head>
 
   <body>
     <!-- //applying the class atributes for header within the div -->
-
     <div class="header">
       <h1>Hori<span class="seo">seo</span>n</h1>
-
       <div>
         <ul>
           <li>
             <a href="#search-engine-optimization">Search Engine Optimization</a>
           </li>
-
           <li>
             <a href="#online-reputation-management"
               >Online Reputation Management</a
             >
           </li>
-
           <li>
             <a href="#social-media-marketing">Social Media Marketing</a>
           </li>
         </ul>
       </div>
     </div>
-
     <div class="hero"></div>
-
-    <div id="search-engine-optimization" class="content">
+    <div id="search-engine-optimization">
+      <!-- image for search engine optimizaton -->
       <div class="search-engine-optimization">
-        <!-- image for search engine optimizaton -->
+        <!-- linking image for online reputation managment -->
         <img
           src="./assets/images/search-engine-optimization.jpg"
-          alt="depiction of the different aspects of the search engine operations"
           class="float-left"
         />
-
         <h2>Search Engine Optimization</h2>
-
         <p>
           The dominance of mobile internet use means that users are searching
           for the right business as they travel, shop, or sit on their couch at
@@ -58,20 +46,15 @@
           visibility and find the right customers for your business.
         </p>
       </div>
-
       <div
         id="online-reputation-management"
         class="online-reputation-management"
       >
-        <!-- linking image for online reputation managment -->
         <img
           src="./assets/images/online-reputation-management.jpg"
-          alt="picture of online reputation increases on computer screen"
           class="float-right"
         />
-
         <h2>Online Reputation Management</h2>
-
         <p>
           The web is full of opinions, and some of these can be negative. Social
           media allows anyone with an internet connection to say whatever they
@@ -83,16 +66,12 @@
       <!-- //applying id and class attributes for social media marketing -->
 
       <div id="social-media-marketing" class="social-media-marketing">
-        <!-- //linking the social media marketing image  -->
-
         <img
           src="./assets/images/social-media-marketing.jpg"
-          alt="Showing social media collaberation"
           class="float-left"
         />
         <!-- header for social media marketing -->
         <h2>Social Media Marketing</h2>
-
         <p>
           Social media continues to have a sizable influence on buying habits.
           Social media marketing helps you determine which platforms are suited
@@ -101,38 +80,23 @@
         </p>
       </div>
     </div>
-
     <!-- //appying class atributes for benefits within the div -->
-
     <div class="benefits">
       <!-- //applying class attributes for benefit-lead  -->
 
       <div class="benefit-lead">
         <h3>Lead Generation</h3>
-
         <!-- //linking image for lead generation doc -->
-
-        <img
-          src="./assets/images/lead-generation.png"
-          alt="picture depicting lead generation effectiveness"
-        />
-
+        <img src="./assets/images/lead-generation.png" />
         <p>
           Inbound strategies for lead generation require less work for your
           business, bringing customers directly to your website.
         </p>
       </div>
-
       <!-- //applying class attributes for benefit-brand -->
-
       <div class="benefit-brand">
         <h3>Brand Awareness</h3>
-
-        <img
-          src="./assets/images/brand-awareness.png"
-          alt="image for brand awareness, a lightbulb"
-        />
-
+        <img src="./assets/images/brand-awareness.png" />
         <p>
           Users find your business through paid and organic searches, increasing
           the search ranking and visibility for your business.
@@ -142,21 +106,15 @@
       <div class="benefit-cost">
         <h3>Cost Management</h3>
         <!-- linking image for cost management -->
-        <img
-          src="./assets/images/cost-management.png"
-          alt="picture of computer with the word Management displayed on the screen"
-        />
-
+        <img src="./assets/images/cost-management.png" />
         <p>
           As the search ranking for your business increases, your advertising
           costs decrease, and you no longer need to advertise your page.
         </p>
       </div>
     </div>
-
     <div class="footer">
       <h2>Made with ❤️️ by Horiseon</h2>
-
       <p>&copy; 2019 Horiseon Social Solution Services, Inc.</p>
     </div>
   </body>
