--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
   <body>
     <!-- //applying the class atributes for header within the div -->
-    <div class="header">
+    <section class="header">
       <h1>Hori<span class="seo">seo</span>n</h1>
-      <div>
+      <nav>
         <ul>
           <li>
             <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -27,12 +27,12 @@
             <a href="#social-media-marketing">Social Media Marketing</a>
           </li>
         </ul>
-      </div>
-    </div>
-    <div class="hero"></div>
-    <div id="search-engine-optimization">
+      </nav>
+    </section>
+    <article class="hero"></article>
+    <section id="search-engine-optimization">
       <!-- image for search engine optimizaton -->
-      <div class="search-engine-optimization">
+      <article class="search-engine-optimization">
         <!-- linking image for online reputation managment -->
         <img
           src="./assets/images/search-engine-optimization.jpg"
@@ -45,8 +45,8 @@
           home. Search Engine Optimization (SEO) allows you to increase your
           visibility and find the right customers for your business.
         </p>
-      </div>
-      <div
+      </article>
+      <article
         id="online-reputation-management"
         class="online-reputation-management"
       >
@@ -62,10 +62,10 @@
           control over what potential customers see when they search for your
           business.
         </p>
-      </div>
+      </article>
       <!-- //applying id and class attributes for social media marketing -->
 
-      <div id="social-media-marketing" class="social-media-marketing">
+      <article id="social-media-marketing" class="social-media-marketing">
         <img
           src="./assets/images/social-media-marketing.jpg"
           class="float-left"
@@ -78,13 +78,13 @@
           to your brand, using analytics to find the right markets and increase
           your lead generation.
         </p>
-      </div>
-    </div>
+      </article>
+    </section>
     <!-- //appying class atributes for benefits within the div -->
-    <div class="benefits">
+    <section class="benefits">
       <!-- //applying class attributes for benefit-lead  -->
 
-      <div class="benefit-lead">
+      <article class="benefit-lead">
         <h3>Lead Generation</h3>
         <!-- //linking image for lead generation doc -->
         <img src="./assets/images/lead-generation.png" />
@@ -92,18 +92,18 @@
           Inbound strategies for lead generation require less work for your
           business, bringing customers directly to your website.
         </p>
-      </div>
+      </article>
       <!-- //applying class attributes for benefit-brand -->
-      <div class="benefit-brand">
+      <article class="benefit-brand">
         <h3>Brand Awareness</h3>
         <img src="./assets/images/brand-awareness.png" />
         <p>
           Users find your business through paid and organic searches, increasing
           the search ranking and visibility for your business.
         </p>
-      </div>
+      </article>
       <!-- //applying class attributes for benefit-cost -->
-      <div class="benefit-cost">
+      <article class="benefit-cost">
         <h3>Cost Management</h3>
         <!-- linking image for cost management -->
         <img src="./assets/images/cost-management.png" />
@@ -111,11 +111,11 @@
           As the search ranking for your business increases, your advertising
           costs decrease, and you no longer need to advertise your page.
         </p>
-      </div>
-    </div>
-    <div class="footer">
+      </article>
+    </section>
+    <section class="footer">
       <h2>Made with ❤️️ by Horiseon</h2>
       <p>&copy; 2019 Horiseon Social Solution Services, Inc.</p>
-    </div>
+    </section>
   </body>
 </html>
