--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- //linking the style.css document to the html -->
 
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>website</title>
+    <title>Horiseon</title>
   </head>
 
   <body>
@@ -30,88 +30,102 @@
       </nav>
     </section>
     <article class="hero"></article>
-    <section id="search-engine-optimization">
-      <!-- image for search engine optimizaton -->
-      <article class="search-engine-optimization">
-        <!-- linking image for online reputation managment -->
-        <img
-          src="./assets/images/search-engine-optimization.jpg"
-          class="float-left"
-        />
-        <h2>Search Engine Optimization</h2>
-        <p>
-          The dominance of mobile internet use means that users are searching
-          for the right business as they travel, shop, or sit on their couch at
-          home. Search Engine Optimization (SEO) allows you to increase your
-          visibility and find the right customers for your business.
-        </p>
-      </article>
-      <article
-        id="online-reputation-management"
-        class="online-reputation-management"
-      >
-        <img
-          src="./assets/images/online-reputation-management.jpg"
-          class="float-right"
-        />
-        <h2>Online Reputation Management</h2>
-        <p>
-          The web is full of opinions, and some of these can be negative. Social
-          media allows anyone with an internet connection to say whatever they
-          want about your business. Online Reputation Management gives you the
-          control over what potential customers see when they search for your
-          business.
-        </p>
-      </article>
-      <!-- //applying id and class attributes for social media marketing -->
+    <section class="flex-container">
+      <section id="search-engine-optimization">
+        <!-- image for search engine optimizaton -->
+        <article class="search-engine-optimization">
+          <!-- linking image for online reputation managment -->
+          <img
+            src="./assets/images/search-engine-optimization.jpg"
+            alt="notepad with an organized flow"
+            class="float-left"
+          />
+          <h2>Search Engine Optimization</h2>
+          <p>
+            The dominance of mobile internet use means that users are searching
+            for the right business as they travel, shop, or sit on their couch
+            at home. Search Engine Optimization (SEO) allows you to increase
+            your visibility and find the right customers for your business.
+          </p>
+        </article>
+        <article
+          id="online-reputation-management"
+          class="online-reputation-management"
+        >
+          <img
+            src="./assets/images/online-reputation-management.jpg"
+            alt="Computer with Reputation on Screen"
+            class="float-right"
+          />
+          <h2>Online Reputation Management</h2>
+          <p>
+            The web is full of opinions, and some of these can be negative.
+            Social media allows anyone with an internet connection to say
+            whatever they want about your business. Online Reputation Management
+            gives you the control over what potential customers see when they
+            search for your business.
+          </p>
+        </article>
+        <!-- //applying id and class attributes for social media marketing -->
 
-      <article id="social-media-marketing" class="social-media-marketing">
-        <img
-          src="./assets/images/social-media-marketing.jpg"
-          class="float-left"
-        />
-        <!-- header for social media marketing -->
-        <h2>Social Media Marketing</h2>
-        <p>
-          Social media continues to have a sizable influence on buying habits.
-          Social media marketing helps you determine which platforms are suited
-          to your brand, using analytics to find the right markets and increase
-          your lead generation.
-        </p>
-      </article>
-    </section>
-    <!-- //appying class atributes for benefits within the div -->
-    <section class="benefits">
-      <!-- //applying class attributes for benefit-lead  -->
+        <article id="social-media-marketing" class="social-media-marketing">
+          <img
+            src="./assets/images/social-media-marketing.jpg"
+            alt="People collaborating with social media"
+            class="float-left"
+          />
+          <!-- header for social media marketing -->
+          <h2>Social Media Marketing</h2>
+          <p>
+            Social media continues to have a sizable influence on buying habits.
+            Social media marketing helps you determine which platforms are
+            suited to your brand, using analytics to find the right markets and
+            increase your lead generation.
+          </p>
+        </article>
+      </section>
+      <!-- //appying class atributes for benefits within the div -->
+      <section class="benefits">
+        <!-- //applying class attributes for benefit-lead  -->
 
-      <article class="benefit-lead">
-        <h3>Lead Generation</h3>
-        <!-- //linking image for lead generation doc -->
-        <img src="./assets/images/lead-generation.png" />
-        <p>
-          Inbound strategies for lead generation require less work for your
-          business, bringing customers directly to your website.
-        </p>
-      </article>
-      <!-- //applying class attributes for benefit-brand -->
-      <article class="benefit-brand">
-        <h3>Brand Awareness</h3>
-        <img src="./assets/images/brand-awareness.png" />
-        <p>
-          Users find your business through paid and organic searches, increasing
-          the search ranking and visibility for your business.
-        </p>
-      </article>
-      <!-- //applying class attributes for benefit-cost -->
-      <article class="benefit-cost">
-        <h3>Cost Management</h3>
-        <!-- linking image for cost management -->
-        <img src="./assets/images/cost-management.png" />
-        <p>
-          As the search ranking for your business increases, your advertising
-          costs decrease, and you no longer need to advertise your page.
-        </p>
-      </article>
+        <article class="benefit-lead">
+          <h3>Lead Generation</h3>
+          <!-- //linking image for lead generation doc -->
+          <img
+            src="./assets/images/lead-generation.png"
+            alt="depiction of lead effectiveness"
+          />
+          <p>
+            Inbound strategies for lead generation require less work for your
+            business, bringing customers directly to your website.
+          </p>
+        </article>
+        <!-- //applying class attributes for benefit-brand -->
+        <article class="benefit-brand">
+          <h3>Brand Awareness</h3>
+          <img
+            src="./assets/images/brand-awareness.png"
+            alt="lightbulb for awareness"
+          />
+          <p>
+            Users find your business through paid and organic searches,
+            increasing the search ranking and visibility for your business.
+          </p>
+        </article>
+        <!-- //applying class attributes for benefit-cost -->
+        <article class="benefit-cost">
+          <h3>Cost Management</h3>
+          <!-- linking image for cost management -->
+          <img
+            src="./assets/images/cost-management.png"
+            alt="managing costs gear cog"
+          />
+          <p>
+            As the search ranking for your business increases, your advertising
+            costs decrease, and you no longer need to advertise your page.
+          </p>
+        </article>
+      </section>
     </section>
     <section class="footer">
       <h2>Made with ❤️️ by Horiseon</h2>
